<resources>
    <string name="app_name">Race Stats</string>
    <string name="cpu_temp">CPU Temp: °00 C</string>
    <string name="speed">0</string>
    <string name="mph">mph</string>
    <string name="timer">00:00.00</string>
    <string name="startStopTimer">start</string>

    <string name="times">Times</string>
    <string name="recordedTimeOne">0-60: 00:00.00</string>
    <string name="recordedTimeTwo">60-100: 00:00.00</string>
    <string name="recordedTimeThree">100-120: 00:00.00</string>

    <string name="back_arrow">Back</string>
    <string name="hamburger_button">Menu</string>
    <string name="coolant_logo">Coolant Logo</string>
    <string name="coolant_temperature">0°C</string>
    <string name="intake_logo">Intake Logo</string>
    <string name="intake_temperature">0°C</string>
    <string name="coolant_logo_simple">Coolant Logo Simple</string>
    <string name="temp_simple">0°C</string>
    <string name="close_popout_menu">Close Menu</string>
    <string name="available_data">Available Data</string>
    <string name="coolant_temp_active">Coolant Temp - Active</string>
    <string name="intake_temp_active">Intake Temp - Active</string>
    <string name="fuel_trim_active">Fuel Trim - Active</string>
    <string name="add_custom_gauge">Add Custom Gauge</string>
    <string name="no_bluetooth_title">No Bluetooth Device Detected</string>
    <string name="no_bluetooth_message">There is no Bluetooth device connected. Please connect a device and try again.</string>
    <string name="temperature_format">%d °C</string>
    <string name="ok_button">OK</string>
</resources>