<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgedcarbonbackground"
    tools:context=".MainActivity">


    <!--    <com.example.racestats.SpacedNumberPicker-->
    <!--        android:id="@+id/spaced_number_picker"-->
    <!--        android:layout_width="411dp"-->
    <!--        android:layout_height="182dp"-->
    <!--        android:background="@color/black"-->
    <!--        android:orientation="vertical"-->
    <!--        android:showDividers="none"-->
    <!--        android:textSize="200sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.947"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.32999998" />-->

    <TextView
        android:id="@+id/cpuTemp"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:text="@string/cpu_temp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="586dp"
        android:layout_height="202dp"
        android:text="@string/speed"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="160sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/mph"
        android:layout_width="137dp"
        android:layout_height="81dp"
        android:text="@string/mph"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="233dp"
        android:layout_height="60dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startStopTimer"
        android:layout_width="207dp"
        android:layout_height="65dp"
        android:background="#FFE222"
        android:text="@string/startStopTimer"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:layout_constraintVertical_bias="0.373" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="285dp"
        android:layout_height="9dp"
        android:progressBackgroundTint="#fff"
        android:progressTint="#FFE222"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <TextView
        android:id="@+id/recordedTimes"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:text="@string/times"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <View
        android:id="@+id/yellowTimesBar"
        android:layout_width="169dp"
        android:layout_height="3dp"
        android:background="#FFE222"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordedTimes"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recordedTimeOne"
        android:layout_width="149dp"
        android:layout_height="28dp"
        android:layout_marginBottom="76dp"
        android:text="@string/recordedTimeOne"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellowTimesBar"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/recordedTimeTwo"
        android:layout_width="175dp"
        android:layout_height="27dp"
        android:text="@string/recordedTimeTwo"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordedTimeOne"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/recordedTimeThree"
        android:layout_width="178dp"
        android:layout_height="26dp"
        android:text="@string/recordedTimeThree"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordedTimeTwo"
        app:layout_constraintVertical_bias="0.121" />

    <!-- Home icon -->
    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />



</androidx.constraintlayout.widget.ConstraintLayout>